# tools

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  components.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: auto-release.yaml  deploy.yaml  docr-clean-up.yml  version-bump.yaml
client/: index.css  main.tsx  router.ts
client/components/: nav-bar.tsx
client/components/notifications/: NotificationBell.tsx  api.ts  useNotificationStream.ts  useNotifications.ts
client/exam-creator/components/: ExamLayout.tsx  ExamOrgSwitcher.tsx  accordian.tsx  config-view.tsx  database-status.tsx  dialogue-form.tsx  edit-exam-actions.tsx  edit-exam-config.tsx  edit-exam-generation-variability.tsx  exam-card.tsx  exam-metrics-card.tsx  generate-modal.tsx  landing-card.tsx  moderation-card.tsx  multiple-choice-form.tsx  protected-route.tsx  question-form.tsx  question-search.tsx  question-type-config-form.tsx  seed-modal.tsx  tag-config-form.tsx  time-taken-distribution.tsx  toaster.tsx  tooltip.tsx  users-on-page-avatars.tsx  users-on-page.tsx
client/exam-creator/contexts/: auth.tsx  users-websocket.tsx
client/exam-creator/hooks/: use-collab-exam.ts
client/exam-creator/pages/: attempts.tsx  edit-attempt.tsx  edit-exam.tsx  exams.tsx  landing.tsx  metrics.tsx  view-metrics.tsx
client/exam-creator/types/: index.ts
client/exam-creator/utils/: fetch.ts  question.ts
client/hooks/: useOrgs.ts
client/pages/: home.tsx  settings.tsx
client/routes/: __root.tsx  index.tsx  login.tsx  settings.tsx
client/routes/exam-creator/: attempts.tsx  attempts_.$id.tsx  exams.tsx  exams_.$id.tsx  index.tsx  metrics.tsx  metrics_.exams.$id.tsx  route.tsx
client/routes/task-tracker/: _protected.dashboard.tsx  _protected.orgs.$slug.tsx  _protected.orgs.invites.$token.tsx  _protected.orgs.new.tsx  _protected.reports.tsx  _protected.reports_.$id.tsx  _protected.tsx  index.tsx  route.tsx  share.$token.tsx
client/routes/team-board/: index.tsx  route.tsx  settings.tsx
client/task-tracker/: index.css
client/task-tracker/components/: app-layout.tsx
client/task-tracker/contexts/: auth-context.tsx
client/task-tracker/lib/: api.ts
client/task-tracker/pages/: dashboard.tsx  org-detail.tsx  org-invite-accept.tsx  org-new.tsx  report-view.tsx  reports.tsx  share.tsx
client/team-board/: App.tsx  index.css
client/team-board/components/: BoardView.tsx  ConnectionStatus.tsx  CursorOverlay.tsx  DropReasonModal.tsx  LoginForm.tsx  NotificationBell.tsx  OrgPage.tsx  OrgPanel.tsx  OrgSwitcher.tsx  Skeleton.tsx  TaskCard.tsx  TaskDetailModal.tsx  TaskFormModal.tsx  TaskSuggestions.tsx  ThemeToggle.tsx  UserBoardView.tsx
client/team-board/hooks/: useCurrentUser.ts  useNotifications.ts  useOrgs.ts  useSuggestions.ts  useTasks.ts  useTheme.ts  useThrottle.ts  useWebSocket.ts
client/team-board/lib/: api.ts
client/team-board/pages/: SettingsPage.tsx
client/team-board/store/: presence.ts
server/: lib.rs  main.rs
server/auth/: dev.rs  github.rs  mod.rs
server/exam_creator/: app.rs  config.rs  errors.rs  generate.rs  mod.rs  state.rs
server/exam_creator/database/: mod.rs  prisma.rs
server/exam_creator/extractor/: mod.rs
server/exam_creator/routes/: attempts.rs  events.rs  exam_challenge.rs  exams.rs  metrics.rs  mod.rs  moderations.rs  users.rs  websocket.rs
server/task_tracker/: mod.rs
server/task_tracker/api/: email.rs  error.rs  mod.rs  router.rs  spaces.rs
server/task_tracker/shared/: config.rs  db.rs  error.rs  mod.rs
server/task_tracker/worker/: error.rs  mod.rs  spaces.rs
server/team_board/: app.rs  config.rs  db.rs  error.rs  mod.rs  ws.rs
(+49 files in other folders)
