[package]
name = "server"
version = "0.5.0"
edition = "2024"

[lib]
path = "server/lib.rs"

[[bin]]
name = "server"
path = "server/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["cookie-private", "typed-header"] }
axum-streams = { version = "0.24.0", features = ["json"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "request-id",
  "set-header",
  "fs",
  "limit",
  "timeout",
] }
mongodb = { version = "3.5", features = ["bson-3"] }
bson = { version = "3", features = ["chrono-0_4", "serde_with-3", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.46.0", features = [
  "tower-axum-matched-path",
  "tracing",
] }
jsonwebtoken = "9"
reqwest = { version = "0.13", features = ["json", "multipart"] }
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
url = "2"
dotenvy = "0.15"
urlencoding = "2"
once_cell = "1"
rand = "0.10"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
dashmap = "6"
governor = "0.6"
pulldown-cmark = "0.12"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
prisma-rust-schema = { git = "https://github.com/ShaunSHamilton/prisma-rust-schema.git", version = "2.1.1", features = [
  "bson",
  "mongodb",
] }
supabase_rs = "0.7.0"
